--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     
     <!-- Cart Icon -->
     <div class="cart-icon" onclick="toggleCartModal()">
-      <img src="image/cart-icon.jpg" alt="Shopping Cart">
+      <img src="cart-icon.jpg" alt="Shopping Cart">
       <div class="cart-count" id="cartCount">0</div>
     </div>
   </nav>
@@ -73,7 +73,7 @@
     <div class="menu-items">
       <!-- Menu Item: Margherita Pizza -->
       <div class="menu-item">
-        <img src="image/pizza1.jpg" alt="Margherita Pizza">
+        <img src="pizza1.jpg" alt="Margherita Pizza">
         <h3>Margherita Pizza</h3>
         <p>Tomato sauce, mozzarella, fresh basil</p>
         <div class="price">35 SAR</div>
@@ -81,7 +81,7 @@
       </div>
       <!-- Menu Item: Pepperoni Pizza -->
       <div class="menu-item">
-        <img src="image/pizza2.jpg" alt="Pepperoni Pizza">
+        <img src="pizza2.jpg" alt="Pepperoni Pizza">
         <h3>Pepperoni Pizza</h3>
         <p>Tomato sauce, mozzarella, pepperoni</p>
         <div class="price">45 SAR</div>
@@ -89,7 +89,7 @@
       </div>
       <!-- Menu Item: Veggie Pizza -->
       <div class="menu-item">
-        <img src="image/pizza3.jpg" alt="Veggie Pizza">
+        <img src="pizza3.jpg" alt="Veggie Pizza">
         <h3>Veggie Pizza</h3>
         <p>Tomato sauce, mozzarella, green pepper, onion, olives</p>
         <div class="price">40 SAR</div>
@@ -97,7 +97,7 @@
       </div>
       <!-- Menu Item: Chicken Pizza -->
       <div class="menu-item">
-        <img src="image/pizza4.jpg" alt="Chicken Pizza">
+        <img src="pizza4.jpg" alt="Chicken Pizza">
         <h3>Chicken Pizza</h3>
         <p>Tomato sauce, mozzarella, grilled chicken, corn</p>
         <div class="price">50 SAR</div>
@@ -105,7 +105,7 @@
       </div>
       <!-- Menu Item: Coca-Cola -->
       <div class="menu-item">
-        <img src="image/coke.jpg" alt="Coca-Cola">
+        <img src="coke.jpg" alt="Coca-Cola">
         <h3>Coca-Cola</h3>
         <p>Refreshing soda drink</p>
         <div class="price">10 SAR</div>
@@ -113,7 +113,7 @@
       </div>
       <!-- Menu Item: Orange Juice -->
       <div class="menu-item">
-        <img src="image/orange-juce.jpg" alt="Orange Juice">
+        <img src="orange-juce.jpg" alt="Orange Juice">
         <h3>Orange Juice</h3>
         <p>100% natural and refreshing</p>
         <div class="price">12 SAR</div>
@@ -168,3 +168,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+  
