--- a/index.html
+++ b/index.html
@@ -159,9 +159,9 @@
   <footer>
     <p>&copy; 2025 Pizza Restaurant</p>
     <div class="social">
-      <a href="#" title="Facebook">Facebook</a>
-      <a href="#" title="Instagram">Instagram</a>
-      <a href="#" title="Twitter">Twitter</a>
+      <a href="Facebook.com" title="Facebook">Facebook</a>
+      <a href="Instagra.com" title="Instagram">Instagram</a>
+      <a href="x.com" title="Twitter">Twitter</a>
     </div>
   </footer>
 
