--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
   <footer>
     <p>&copy; 2025 Pizza Restaurant</p>
     <div class="social">
-      <a href="Facebook.com" title="Facebook">Facebook</a>
+      <a href="https://m.facebook.com/" title="Facebook">Facebook</a>
       <a href="Instagra.com" title="Instagram">Instagram</a>
       <a href="x.com" title="Twitter">Twitter</a>
     </div>
